--- a/src/ReactUI/Grid/index.scss
+++ b/src/ReactUI/Grid/index.scss
@@ -17,9 +17,11 @@
     &__row {
         @include clearfix();
     }
+    &__placeholder {
+        float: left;
+        visibility: hidden;
+    }
     &__element{
         float: left;
-        width: 50px;
-        height: 50px;
     }
 }
